compiler/testData/diagnostics/tests/DeprecatedTraitKeyword.kt
<!DEPRECATED_TRAIT_KEYWORD!>trait<!> A {
}
